<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.activity.MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:src="@drawable/reccr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bu2"
        android:layout_width="96dp"
        android:layout_height="42dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/exchangerate"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/bu1"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:background="@drawable/bac_butt"
        android:fontFamily="serif"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:text="@string/convert"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bu2"
        app:layout_constraintEnd_toStartOf="@+id/bu2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bu2"
        app:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/bu3"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/Historicalrates"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bu2"
        app:layout_constraintTop_toTopOf="@+id/bu2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:navGraph="@navigation/nav" />

</androidx.constraintlayout.widget.ConstraintLayout>